[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "pyrsca"
description = "Python bindings for rsca library"
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "yvictor", email = "yvictor3141@gmail.com" }
]
classifiers = [

    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["rust", "cryptography", "signature"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-dotenv>=0.5.2",
    "maturin>=1.2,<2.0",
]
test = [
    "pytest>=6.0",
    "pytest-dotenv>=0.5.2",
]

[project.urls]
Homepage = "https://github.com/yvictor/rsca"
Repository = "https://github.com/yvictor/rsca"
Issues = "https://github.com/yvictor/rsca/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-dotenv>=0.5.2",
    "maturin>=1.2,<2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
